--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,14 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
+title: 给你的酷站起一个针不戳的名字
+author: 作者名
+email: your-email@domain.com 大侠留下邮件日后好相见
+description: > # 大于号表示从下一行开始忽略换行直到遇到 "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
+  为你的网站写一个简介来引导用户吧，这个简介将被搜索引擎引用，并在feed.xml中引用。
 
-# social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
+# 社交媒体地址
+twitter_username: your-twitter-handle # 不要添加 @ 字符, 否则将会出现构建错误。
 github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
